# check_36

./: .gitignore  36協定チェック結果_20251025.md  CHANGELOG_v2.0.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
docs/: WEEKDAY_CALCULATION.md
docs/requirements/: 01_legal_baseline.md  02_functional_requirements.md  03_nonfunctional_requirements.md  04_mcp_interface_spec.md  05_data_model.md  06_risks_constraints.md  README.md
schemas/: input.schema.json  output.schema.json
src/check36/: __init__.py  __main__.py  calculator.py  models.py  server.py  utils.py
templates/: config.sample.json  daily_records.sample.json  monthly_totals.sample.json  simple_input.sample.json
tests/: __init__.py  test_calculator.py  test_utils.py
